# open-silico

./: .crabbox.yaml  .gitignore  CONTEXT.md  LICENSE  PLAN.md  README.md  pyproject.toml
.agents/skills/crabbox/: SKILL.md
.github/workflows/: crabbox.yml
backend/: .env.example  export_openapi.py  modal_app.py
backend/open_silico/: __init__.py  __main__.py  api.py  config.py  experiment_contracts.py  experiment_orchestrator.py  experiment_repository.py  jlens_contracts.py  jlens_service.py  model_registry.py  model_specs.py  remote_runtime.py  schemas.py  steering_contracts.py  steering_service.py  technique_registry.py
backend/open_silico/techniques/: __init__.py  activation_steering.py  jacobian_lens.py
docs/: PRD.md
frontend/: .env.example  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  JacobianLensWorkbench.tsx  ResearchCopilot.tsx  SteeringWorkbench.tsx  api.ts  index.css
frontend/src/experiments/: CausalTraceWorkbench.tsx  ClaimCheckWorkbench.tsx  ExperimentHistory.tsx  causalTrace.test.ts  causalTrace.ts  claimCheck.test.ts  (+3 more)
mcp-server/: .env.example  package-lock.json  package.json  tsconfig.json
mcp-server/src/: protocol.test.ts  protocol.ts  server.ts
scripts/: crabbox-daytona  deploy-modal.sh  run-mcp-local.sh
tests/backend/: test_api.py  test_experiment_orchestrator.py  test_experiment_repository.py  test_gpu_import_boundary.py  test_jlens_api.py  test_jlens_engine.py  test_steering_api.py  test_technique_registry.py
tests/remote/: test_modal_jlens.py
(+5 files in other folders)
