[project]
name = "open-silico"
version = "0.1.0"
description = "Open-source interpretability workbench for open-weight language models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "modal>=1.0.0",
    "pydantic-settings>=2.10.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests/backend"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
